--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "1.46.1",
-    "@types/node": "22.5.0"
+    "@types/node": "22.5.0",
+    "prettier": "3.3.3"
   }
 }
